Create new and edit forms and partials

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,17 +8,17 @@
   <div class="col-lg-4">
     <h2 class="midrow">View Recipes as Guest User</h2>
     <h3 class="left">Browse and view Recipes as guest and SignUp later</h3>
-    <p><%= link_to "Browse Recipes later", "" ,class: "btn btn-warning btn-small"%></p>
+    <p><%= link_to "Browse Recipes Listing", recipes_path ,class: "btn btn-warning btn-small"%></p>
   </div>
   <div class="col-lg-4">
     <h2 class="midrow">View Recipes as Guest User</h2>
     <h3 class="left">Browse and view Recipes as guest and SignUp later</h3>
-    <p><%= link_to "Browse Recipes later", "" ,class: "btn btn-warning btn-small"%></p>
+    <p><%= link_to "Browse Recipes Listing", "" ,class: "btn btn-warning btn-small"%></p>
   </div>
   <div class="col-lg-4">
     <h2 class="midrow">View Recipes as Guest User</h2>
     <h3 class="left">Browse and view Recipes as guest and SignUp later</h3>
-    <p><%= link_to "Browse Recipes later", "" ,class: "btn btn-warning btn-small"%></p>
+    <p><%= link_to "Browse Recipes Listing", "" ,class: "btn btn-warning btn-small"%></p>
   </div>
   
 </div>
